--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -6,11 +6,24 @@
     }
 /*Acerca de mi*/
 #acerca-de-mi {
+
+    
     float: right;
     background: linear-gradient(rgb(216, 83, 205), rgb(74, 180, 230));
     height: auto;
     padding: 5px;
-    h2 {  color: white;
+
+h1 { color: rgb(0, 0, 0);
+    text-shadow: 1px 1px 2px rgb(98, 98, 98);
+    text-align: center;
+    font-family: var(--font-textos);
+    font-style: var(--font-textos);
+    font-size: 60px;
+
+}
+
+    h2 {  
+        color: white;
         text-shadow: 1px 1px 2px rgb(98, 98, 98);
         text-align: center;
         font-family: var(--font-titulos);
